# redbull

./: .gitignore  .gitmodules  .~lock.static_box_5s_static_boxes.csv#  README.md  car_tracker.py  dataset_ros2.py  dynamic_vehicle_detector_ros2.py  how to use code  how to use dataset_ros2  install_dependencies.sh  lidar_preprocessing.py  merge_bags.py  package.xml  parse_bag_ros2.py  requirements.txt  setup.cfg  setup.py
Centerline Extraction/: CMakeLists.txt
Centerline Extraction/include/: config.h  image_processor.h  occupancy_grid_loader.h  visualization_utils.h
Centerline Extraction/input/: redbull_0.yaml
Centerline Extraction/output/icra_2/: centerline.csv
Centerline Extraction/output/redbull_0/: centerline.csv
Centerline Extraction/src/: image_processor.cpp  main.cpp  occupancy_grid_loader.cpp  visualization_utils.cpp
TinyCenterSpeedCode/: 1Train_fast.ipynb  CenterSpeed_dataset.py  centerspeed_best_epoch_1_24_good.pt
bag/example_single_opp_converted_ros2_bag_with_visualization_1754531942/: metadata.yaml
csv/: example_single_opp_converted_ros2_bag_opponent_local_gt1754531942.9666686.csv
data/: dataset_ros2.py  merge_bags.py  parse_bag_csv.py  parse_bag_ros2.py
detector/: dynamic_vehicle_detector_ros2.py  sim_detector_ch4_img128.py
f1tenth_gym_ros/config/: sim.yaml
f1tenth_gym_ros/f1tenth_gym_ros/: gym_bridge.py
f1tenth_gym_ros/launch/: gym_bridge.rviz
lap_evaluator_py/: lap_evaluator.py
launch/: redbull_bag_processor.launch.py  redbull_detector.launch.py
race_stack/: CMakeLists.txt  package.xml
race_stack/crazycontroller_cpp/: CMakeLists.txt  package.xml
race_stack/crazycontroller_cpp/include/crazycontroller_cpp/: controller_manager.hpp  map.hpp
race_stack/crazycontroller_cpp/include/crazycontroller_cpp/utils/global_parameter/: parameter_event_handler.hpp
race_stack/crazycontroller_cpp/include/crazycontroller_cpp/utils/steering_lookup/: lookup_steer_angle.hpp
race_stack/crazycontroller_cpp/launch/: crazycontroller_launch.xml
race_stack/crazycontroller_cpp/src/: controller_manager.cpp  controller_manager_node.cpp  map.cpp
race_stack/crazycontroller_cpp/src/utils/steering_lookup/: lookup_steer_angle.cpp
race_stack/local_planner/: CMakeLists.txt  package.xml
race_stack/local_planner/config/: obstacles_spielberg.yaml
race_stack/local_planner/include/spline_planner_dh_test/: frenet_converter.hpp  spline_planner.hpp
race_stack/local_planner/launch/: spline_planner.launch.py
race_stack/local_planner/src/: frenet_converter.cpp  global_waypoints_publisher.cpp  spline_interpolator.cpp  spline_planner.cpp  spline_planner_node.cpp  static_obstacle_publisher.cpp  waypoint_visualizer.cpp
race_stack/local_planner/waypoints/: 1floor_obs_globalpath.csv  Spielberg_map.csv  redbull_0.csv
race_stack/pl_msgs/: CMakeLists.txt  package.xml
race_stack/pl_msgs/msg/: FrenetDebugArray.msg  OTWpntArray.msg  ObstacleArray.msg  Wpnt.msg  WpntArray.msg  pacakge.xml
race_stack/redbull/: package.xml  setup.py
race_stack/redbull/redbull/detector/: car_tracker.py  perception.py  real_dahye.py  real_detector_ObstacleArray.py  sim_detector_ObstacleArray.py  sim_detector_ch6_img64.py
redbull/redbull_msgs/: CMakeLists.txt  README.md  __init__.py  package.xml
redbull/redbull_msgs/msg/: ObstacleWpnt.msg
src/: spline_planner.py
src/HMI/: CMakeLists.txt  package.xml
src/HMI/src/planning/: planning_visualization_node.cpp
src/f110_msgs/: package.xml
src/global_path_follower/: CMakeLists.txt  README.md  package.xml
src/global_path_follower/config/: global_path_follower.rviz
src/global_path_follower/include/global_path_follower/: global_path_follower.hpp  waypoint_loader.hpp
src/global_path_follower/launch/: global_path_follower.launch.py
src/global_path_follower/msg/: OTWpntArray.msg  Wpnt.msg
src/global_path_follower/src/: global_path_follower.cpp  main.cpp  waypoint_loader.cpp
src/global_path_follower/waypoints/: redbull_0.csv
src/lattice_planner_rb/: CMakeLists.txt  package.xml
src/lattice_planner_rb/config/: lattice_planner.rviz
src/lattice_planner_rb/include/lattice_planner_rb/: cubic_spline.hpp  frenet_converter.hpp  lattice_planner.hpp
src/lattice_planner_rb/launch/: lattice_planner.launch.py  sim_with_lattice.launch.py
src/lattice_planner_rb/msg/: WpntArray.msg
src/lattice_planner_rb/src/: cubic_spline.cpp  frenet_converter.cpp  lattice_planner.cpp  main.cpp  simple_path_follower.cpp  waypoints_to_path_converter.cpp
src/lattice_planner_rb/waypoints/: levine_waypoints.csv
src/spline_planner_dh/: CMakeLists.txt  package.xml
src/spline_planner_dh/include/spline_planner_dh/: frenet_converter.hpp  spline_interpolator.hpp  spline_planner.hpp
src/spline_planner_dh/launch/: spline_planner.launch.py
src/spline_planner_dh/msg/: OTWpnt.msg  OTWpntArray.msg  ObstacleArray.msg  ObstacleWpnt.msg  Wpnt.msg  WpntArray.msg
src/spline_planner_dh/src/: frenet_converter.cpp  global_waypoints_publisher.cpp  spline_interpolator.cpp  spline_planner.cpp  spline_planner_node.cpp
src/spline_planner_dh_test/: CMakeLists.txt  package.xml
src/spline_planner_dh_test/include/spline_planner_dh_test/: spline_interpolator.hpp  spline_planner.hpp
src/spline_planner_dh_test/launch/: spline_planner.launch.py
src/spline_planner_dh_test/msg/: FrenetDebug.msg  OTWpnt.msg  OTWpntArray.msg  ObstacleArray.msg  WpntArray.msg
src/spline_planner_dh_test/src/: global_waypoints_publisher.cpp  spline_planner.cpp  static_obstacle_publisher.cpp  waypoint_visualizer.cpp
src/spline_planner_rb/: CMakeLists.txt  package.xml
src/spline_planner_rb/config/: spline_planner.rviz
src/spline_planner_rb/include/spline_planner_rb/: frenet_converter.hpp  spline_interpolator.hpp  spline_planner.hpp
src/spline_planner_rb/launch/: sim_with_spline.launch.py  spline_planner.launch.py
src/spline_planner_rb/msg/: OTWpnt.msg
src/spline_planner_rb/src/: frenet_converter.cpp  spline_interpolator.cpp  spline_planner.cpp
src/spline_planner_rb/waypoints/: example_waypoints.csv
state_estimation/: setup.py
train/: train.py  train_CenterSpeed_dense.ipynb
(+93 files in other folders)
