<?xml version="1.0"?>
<package format="3">
  <name>redbull</name>
  <version>1.0.0</version>
  <description>Dynamic vehicle detection using TinyCenterSpeed and LiDAR preprocessing package</description>
  <maintainer email="your_email@example.com">harry</maintainer>
  <license>MIT</license>

  <!-- buildtool: CMake + Python -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- build deps: 메시지 생성기 + 메시지에서 쓰는 것 -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- exec deps -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>redbull_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_py</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <!-- ★ 반드시 ament_cmake 여야 CMakeLists.txt가 실행됨 -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
