<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lap_evaluator_py</name>
  <version>0.0.1</version>
  <description>Lap evaluator node for F1TENTH</description>
  <maintainer email="minwon0314@hanyang.ac.kr">lmw</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>numpy</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
