<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pl_msg</name>
  <version>0.0.1</version>
  <description>Messages for perception + local planner</description>
  <maintainer email="you@example.com">Dahoon Jeong</maintainer>
  <license>MIT</license>

  <!-- 빌드툴: CMake -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- rosidl -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 메시지에서 사용하는 의존 -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- (필요 시) <depend>builtin_interfaces</depend> -->

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
