<?xml version="1.0"?>
<package format="3">
  <name>redbull</name>
  <version>1.0.0</version>
  <description>Dynamic vehicle detection using TinyCenterSpeed and LiDAR preprocessing</description>
  <maintainer email="your_email@example.com">harry</maintainer>
  <license>MIT</license>

  <!-- buildtool: 파이썬 패키지 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>pl_msg</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_py</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
