<?xml version="1.0"?>
<package format="3">
  <name>redbull_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for redbull project</description>
  <maintainer email="harry@example.com">harry</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
