<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>HMI</name>
  <version>0.0.0</version>
  <description>HMI node for F1TENTH racing</description>
  <maintainer email="minwon0314@hanyang.ac.kr">lmw</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>f110_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
